// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowNavTabs behaviour does nothing if extra keys are pressed 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour does nothing if invalid event 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects first item in items with home 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects last item in items with end 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects next item with arrow down 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects next item with arrow right 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects next item with letter starting with key pressed 1`] = `
<ul
  aria-activedescendant="aNM-0-this"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-this"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-0"
      role="tab"
    >
      this
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-That"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      That
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-2-There"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-2"
      role="tab"
    >
      There
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects next item with letter starting with key pressed circular 1`] = `
<ul
  aria-activedescendant="aNM-2-There"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-this"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-0"
      role="tab"
    >
      this
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-That"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      That
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-2-There"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-2"
      role="tab"
    >
      There
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects previous item with arrow left 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour selects previous item with arrow up 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs behaviour sets selected on click 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs rendering renders ArrowNavTabs 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavTabs rendering renders ArrowNavTabs with non default active 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavTabs"
  role="tablist"
>
  
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-0-One"
  >
    <button
      aria-selected="false"
      class="ArrowNavTabs__item --uppercase"
      id="aNM-btn-0"
      role="tab"
    >
      One
    </button>
  </li>
  <li
    class="ArrowNavTabs__itemContainer"
    id="aNM-1-Two"
  >
    <button
      aria-selected="true"
      class="ArrowNavTabs__item --uppercase ArrowNavTabs__item--selected"
      id="aNM-btn-1"
      role="tab"
    >
      Two
    </button>
  </li>
  
</ul>
`;
